@@ -18,6 +18,8 @@ Revision history for DBIx::Class
           column in the GROUP BY clause
 
     * Misc
+        - Refactored capability handling in Storage::DBI, allows for
+          standardized capability handling wrt query/enable/disable
         - Makefile.PL no longer imports GetOptions() to interoperate
           better with Catalyst installers
         - Bumped minimum Module::Install for developers
